traces/bug_613.txt
src/medit/mlists.c:957: error: DEAD_STORE
  The value written to &cx (type float) is never used.
Showing all 1 steps of the trace


src/medit/mlists.c:957:13: Write of unused value
955.               ps1 = &mesh->sol[ adj[1] ];
956.               
957.               cx = (p0->c[0] + p2->c[0] + p3->c[0]) / 3.0;
                   ^
958.               cy = (p0->c[1] + p2->c[1] + p3->c[1]) / 3.0;
959.               cz = ps1->bb;
